fix: Language selector tweaks to fit in dark mode

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -323,8 +323,12 @@ body > .container {
     right: 0;
     z-index: -1;
 }
+.language-selector {
+    white-space: nowrap;
+    min-width: 48px;
+}
 .language-icon-selected {
-    box-shadow: 0px 0px 4px 4px #9bd2f2;
+    box-shadow: 0px 0px 4px 4px #9773FF;
     border-radius: 12px;
 }
 #social li {
@@ -476,14 +480,6 @@ body > .container {
 }
 .sidebar-xs a.dropdown-toggle:hover {
     color: #fff;
-}
-.sidebar-xs {
-  position: relative;
-}
-.sidebar-xs .language-selector {
-    position: absolute;
-    top: 10px;
-    right: 15px;
 }
 .caret {
     color: #fff;
